# future-explained

./: CMakeLists.txt  README.md
examples/: timer.cpp
include/: future.h
